# Agents

./: .dockerignore  .env.docker.example  .gitignore  AAPS.md  Dockerfile  FrameworkInstallation.md  README.md  docker-compose.yml  pyproject.toml
.agentic/: task_state.db
.agentic/runs/20d5b991-0c8f-4de1-948c-1b11adb33148/: manifest.json
.agentic/runs/f9a98e63-84b1-46a2-89b8-3731666b9ff4/: manifest.json
agents/: registry.yaml
agents/disk_triage_agent/: agent.yaml  config.yaml  flow.md
agents/edge_inference/: agent.yaml  config.yaml
agents/firmware_pen_test/: agent.yaml  config.yaml
agents/hardware_pen_test/: agent.yaml  config.yaml
agents/my_first_agent/: agent.py  agent.yaml
agents/sales_order_investigation/: agent.yaml  config.yaml
examples/configs/: edge_inference.yaml  firmware_workflow.yaml  hardware_pen_test.yaml  sales_order_investigation.yaml
scripts/: run_orchestrator_debug.py
src/agentic/: __init__.py  autogen_runner.py  cli.py  config.py
src/agentic/agents/: __init__.py  base.py  orchestrator.py
src/agentic/llm/: __init__.py  provider.py
src/agentic/memory/: simple.py
src/agentic/tasks/: __init__.py  base.py  runner.py
src/agentic/tools/: __init__.py  base.py  builtin.py  registry.py
src/agentic/web/: __init__.py  app.css  app.js  index.html  server.py
src/agx/: __init__.py  admin_store.py  autogen_runner.py  cli.py  config.py  oauth_providers.py  remote_worker.py  security.py  workspace.py
src/agx/agents/: __init__.py  manifest.py  orchestrator.py
src/agx/llm/: __init__.py
src/agx/memory/: simple.py
src/agx/persistence/: __init__.py  postgres.py
src/agx/runtime/: __init__.py  integrations.py  interoperability.py
src/agx/tasks/: base.py  runner.py
src/agx/tools/: builtin.py  registry.py
src/agx/web/: .env  __init__.py  admin.html  admin.js  app.css  app.js  index.html  login.html  login.js  sample.env  server.py  site.js
tests/: test_admin_store.py  test_agent.py  test_oauth_providers.py  test_orchestrator.py  test_planning_loop.py  test_security.py  test_workspace.py
