[project]
name = "agx-framework"
dynamic = ["version"]
description = "Enterprise-grade agent workflow framework"
readme = "README.md"
authors = [{ name = "Ashish Madkaikar", email = "ashish.madkaikar@emerson.com" }]
requires-python = ">=3.10"
dependencies = [
    "typer>=0.12",
    "pyyaml>=6.0",
    "rich>=13.7",
    "autogen>=0.3.0",
    "ollama>=0.2.0",
    "fix-busted-json>=0.0.18",
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.23.0",
    "authlib>=1.3.1",
    "google-auth>=2.34.0",
    "httpx>=0.27.0",
    "itsdangerous>=2.2.0",
    "python-dotenv>=1.0.1",
    "python-multipart>=0.0.9",
    "requests>=2.31.0",
    "psycopg>=3.1",
    "pika>=1.3.2",
    "opentelemetry-api>=1.24.0",
    "opentelemetry-sdk>=1.24.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]

[build-system]
requires = ["setuptools>=65", "wheel", "setuptools_scm>=8"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
version_scheme = "post-release"
local_scheme = "no-local-version"

[project.scripts]
agx = "agx.cli:app"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = [
    "tests",
]
